discussion/kv_engine/136691/136691_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41510: Refactor Timings class to better handle its Histograms

Refactor Timings class, to not expose pointers to its internal heap
allocated Hdr1sfMicroSecHistogram. Also update these to
std::unique_ptr<>. Update them to be guarded using a cb:RWLock over
using an std::atomic<> as this ensure that the pointer is valid though
out the usage of the pointer.

This patch also removes a small amount of redundant code.

Change-Id: I8af3b0eeaa1f1e4863f47bfa9908f9ddbdac3c07

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-09-22 12:03:30.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-22 12:21:01.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26455/ : ABORTED

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/timings.cc:109:44:
error: "this" argument to member function "reader" has type "const cb::RWLock", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26455/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26455/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5924/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13836/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13836/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4658/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/timings.cc:109:44: error: "this" argument to member function "reader" has type "const cb::RWLock", but function is not marked const [clang-diagnostic-error]
        std::lock_guard<cb::ReaderLock> lg(timings[opIndex].first.reader());
                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/platform/include/platform/rwlock.h:153:28: note: "reader" declared here
inline ReaderLock& RWLock::reader() {
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/timings.cc:121:44: error: "this" argument to member function "reader" has type "const cb::RWLock", but function is not marked const [clang-diagnostic-error]
        std::lock_guard<cb::ReaderLock> lg(timings[opIndex].first.reader());
                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/platform/include/platform/rwlock.h:153:28: note: "reader" declared here
inline ReaderLock& RWLock::reader() {
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4658/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/timings.cc:109:44:
error: "this" argument to member function "reader" has type "const cb::RWLock", but function is not marked const [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4658/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30594/ : FAILURE

Link error: fatal error LNK1168: cannot open phosphor\phosphor.dll for writing ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30594/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5017/ : FAILURE

Compile error at [2020-09-22T12:06:02.313Z] ../kv_engine/daemon/timings.cc:109:44:
error: "this" argument to member function "reader" has type "const cb::RWLock", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5017/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6041/ : FAILURE

Compile error at [2020-09-22T12:16:26.917Z] ../kv_engine/daemon/timings.cc:109:74:
error: passing ?const cb::RWLock? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6041/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6166/ : FAILURE

Compile error at [2020-09-22T12:04:58.085Z] ../kv_engine/daemon/timings.cc:109:44:
error: "this" argument to member function "reader" has type "const cb::RWLock", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6166/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3185/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
